Bug 1044129 - Don't crash if ContainerLayer temporary surface allocation fails. r=jrmuizel